[project]
authors = [
  {name = "T2XX", email = "antongong@foxmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "nicegui extensions"
name = "nicegui_super_extensions"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.3"
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "nicegui"]

[project.urls]
Homepage = "https://github.com/T2XX/nicegui_super_extensions"
Issues = "https://github.com/T2XX/nicegui_super_extensions/issues"
